# mtgscan

./: Makefile  pyproject.toml
mtgscan/: box_text.py  text.py  utils.py
mtgscan/ocr/: ocr.py
tests/: test.py
