[project]
name = "mtgscan"
version = "1.0.8"
description = "Convert an image containing Magic cards to decklist"
authors = [{name = "qfortier", email= "qpfortier@gmail.com"},]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fortierq/MTGScan"
repository = "https://github.com/fortierq/MTGScan"
keywords = ["mtg", "scan", "OCR", "magic", "cards", "computer vision"]
requires-python = "3.10.5"

dependencies = [
    "symspellpy (>=6.7.0)",
    "requests (>=2.25.0)",
    "matplotlib (>=3.3.3)",
    "psutil (>=5.8.0)",
    "numpy (>=2.0.0)",
    "easyocr (>=1.7.2)",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
